Fixed title image not centered in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ p {
 
 /* Mobile View */
 @media (max-Width: 990px) {
-    #title{
+    #title .container-fluid{
         text-align: center;
      }
 
